# MatrixTests1

exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/matrixlib/: Matrix.cpp  Matrix.h  export.h
lib/matrixlib/c/: c_api.cpp  c_api.h
